[build-system]
requires = [
    "setuptools==80.9.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "docassemble.PTLARetainer"
version = "0.0.1"
description = "A docassemble extension for internal PTLA use for reviewing and signing retainers with clients."
readme = "README.md"
authors = [
    { name = "Jack Haycock", email = "jhaycock@ptla.org" },
]
dependencies = []

[project.urls]
Homepage = "https://docassemble.org"

[tool.setuptools.packages.find]
where = [
    ".",
]
